# tfpb2021

./: LICENSE  Lesson01.hs  Lesson02.hs  Lesson02.lhs  Lesson03.hs  Lesson04.hs  Lesson05.hs  Lesson06.hs  Lesson07.hs  Lesson08.hs  Lesson09.hs  Lesson10.hs  Makefile  README.md  WritingCode.md  tfpb2021.cabal
docs/: Lesson02.html  styles.css
hello-wai/: .gitignore  CHANGELOG.md  hello-wai.cabal
hello-wai/app/: Main.hs
hello-wai/src/: App.hs
