cabal-version:      3.0

name:               hello-wai
version:            0.1.0.0
synopsis:
homepage:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aleksei Pirogov
maintainer:         astynax@users.noreply.github.com
category:           Web

library
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:  OverloadedStrings
    exposed-modules:  App
    ghc-options:         -Wall
    build-depends:    base ^>=4.14.3.0
                    , wai
                    , wai-extra
                    , warp
                    , http-types
                    , bytestring
                    , scotty
                    , lucid
                    , aeson
                    , mtl
                    , text

executable hello-wai
    hs-source-dirs:   app
    default-language: Haskell2010
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        hello-wai
